<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/default_margin_padding">

    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
        android:id="@+id/sepv_recipe_video"
        android:layout_width="match_parent"
        android:layout_height="@dimen/exoplayer_height"
        app:controller_layout_id="@layout/custom_playback_control"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_thumbnail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/thumbnail_description"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sepv_recipe_video"
        app:layout_constraintEnd_toEndOf="@+id/sepv_recipe_video"
        app:layout_constraintLeft_toLeftOf="@+id/sepv_recipe_video"
        app:layout_constraintRight_toRightOf="@+id/sepv_recipe_video"
        app:layout_constraintStart_toStartOf="@+id/sepv_recipe_video"
        app:layout_constraintTop_toTopOf="@+id/sepv_recipe_video" />

    <TextView
        android:id="@+id/tv_no_video"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/no_video"
        android:textSize="@dimen/title_text_size"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/sepv_recipe_video"
        app:layout_constraintEnd_toEndOf="@+id/sepv_recipe_video"
        app:layout_constraintLeft_toLeftOf="@+id/sepv_recipe_video"
        app:layout_constraintRight_toRightOf="@+id/sepv_recipe_video"
        app:layout_constraintStart_toStartOf="@+id/sepv_recipe_video"
        app:layout_constraintTop_toTopOf="@+id/sepv_recipe_video" />

    <android.support.v7.widget.CardView
        android:id="@+id/cv_recipe_step_description"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="@dimen/default_margin_padding"
        android:layout_marginTop="@dimen/default_margin_padding"
        app:layout_constraintBottom_toTopOf="@+id/fab_next"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sepv_recipe_video">

        <TextView
            android:id="@+id/tv_step_description"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="@dimen/default_margin_padding"
            android:scrollbars="vertical"
            android:textSize="@dimen/default_text_size"
            tools:text="@string/dummy_text" />

    </android.support.v7.widget.CardView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_next"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_padding"
        android:src="@drawable/ic_navigate_next_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintRight_toRightOf="parent" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/fab_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin_padding"
        android:src="@drawable/ic_navigate_before_black_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</android.support.constraint.ConstraintLayout>