...
        android:layout_marginBottom="@dimen/default_margin_padding"
        android:layout_marginLeft="@dimen/default_margin_padding"
        android:layout_marginStart="@dimen/default_margin_padding"
        android:layout_marginTop="@dimen/default_margin_padding"
        android:text="@string/recipe_steps_title"
        android:textSize="@dimen/title_text_size"
        app:layout_constraintBottom_toTopOf="@+id/rv_steps"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/rv_ingredients" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/rv_steps"
...
